Applications/UptimeKuma/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptimekuma
  labels:
    reloader.stakater.com/reload: 'disabled'
