Applications/UptimeKuma/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
spec:
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
  type: ClusterIP
