Applications/UptimeKuma/base/resources/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-database
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptimekuma
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: uptimekuma
      ports:
        - protocol: TCP
          port: 3306
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 3306

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3001
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 3001
